--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 position: fixed;
                 width: 100%;
                 top: 15%;
+                height: auto;
                 justify-content: center;
             
             ">
@@ -170,7 +171,6 @@
                 <a class="footer_politiqueConfi_P" href="">Politique de confidentialité</a>
             </div>
     </footer>
-    <script src="assets/js/script.js"></script>
     <script src="assets/js/burger.js"></script>
 </body>
 
